--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -155,10 +155,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="NNetCoord.h" />
+    <ClInclude Include="NanoMeter.h" />
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetPixelCoords.h" />
     <ClInclude Include="NNetPoint.h" />
+    <ClInclude Include="Pipeline.h" />
+    <ClInclude Include="Segment.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
