--- a/Win32_appFramework/Win32_appFramework.vcxproj.filters
+++ b/Win32_appFramework/Win32_appFramework.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="win32_appWindowInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_speedControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_scriptHook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
@@ -71,6 +77,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_messagePump.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_speedControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
