--- a/Win32_appFramework/Win32_appFramework.vcxproj.filters
+++ b/Win32_appFramework/Win32_appFramework.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="win32_scriptHook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_zoomControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
