moved PerformanceWindow from win32_utilities back to EvoWindows (too specific to be in utilities)

--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="win32_focusPoint.cpp" />
     <ClCompile Include="win32_gridWindow.cpp" />
     <ClCompile Include="win32_histWrappers.cpp" />
+    <ClCompile Include="win32_performanceWindow.cpp" />
     <ClCompile Include="win32_protocolServer.cpp" />
     <ClCompile Include="win32_statistics.cpp" />
     <ClCompile Include="win32_EvoWorkThread.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_histWrappers.h" />
     <ClInclude Include="win32_packGridPoint.h" />
+    <ClInclude Include="win32_performanceWindow.h" />
     <ClInclude Include="win32_protocolServer.h" />
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_textDisplay.h" />
