--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="win32_histWrappers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win32_performanceWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_histWrappers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_performanceWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
