--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="RectType.h" />
+    <ClInclude Include="SlowMotionRatio.h" />
     <ClInclude Include="SmoothMove.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
