--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -155,10 +155,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="NanoMeter.h" />
+    <ClInclude Include="Knot.h" />
+    <ClInclude Include="Neuron.h" />
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="NNetPixelCoords.h" />
     <ClInclude Include="NNetPoint.h" />
+    <ClInclude Include="NNetTypes.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Segment.h" />
     <ClInclude Include="stdafx.h" />
@@ -166,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetModel.cpp" />
+    <ClCompile Include="Pipeline.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
