RefreshRate separated from RootWindow

--- a/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -87,7 +87,10 @@
     <ClInclude Include="win32_delay.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="RefreshRate.h">
+    <ClInclude Include="win32_refreshRate.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_windowRefreshRate.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
