--- a/Win32_utilities/Win32_utilities.vcxproj
+++ b/Win32_utilities/Win32_utilities.vcxproj
@@ -147,7 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RefreshRate.h" />
+    <ClInclude Include="win32_refreshRate.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_aboutBox.h" />
@@ -170,6 +170,7 @@
     <ClInclude Include="win32_tooltip.h" />
     <ClInclude Include="win32_util.h" />
     <ClInclude Include="win32_util_resource.h" />
+    <ClInclude Include="win32_windowRefreshRate.h" />
     <ClInclude Include="win32_winManager.h" />
   </ItemGroup>
   <ItemGroup>
