--- a/NNetSimu/NNetSimu.vcxproj.filters
+++ b/NNetSimu/NNetSimu.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="win32_NNetController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TimeDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetSimu.rc">
