--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="LogarithmicTrackbar.h" />
     <ClInclude Include="ModelInterface.h" />
     <ClInclude Include="NamedType.h" />
+    <ClInclude Include="observable.h" />
     <ClInclude Include="observerInterface.h" />
     <ClInclude Include="PixelTypes.h" />
     <ClInclude Include="PointType.h" />
