--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,8 +1,8 @@
 MoveWindow IDM_CONS_WINDOW -1270 1284 993 519
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 4036 1095 1936 937
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_HIST_INFO 0 300 301 116
 ShowWindow IDM_HIST_INFO SW_HIDE
-MoveWindow IDM_MAIN_WINDOW 4044 1146 1920 826
+MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
