Refactoring. Scale as separate class

--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -157,9 +157,11 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="EnumArray.h" />
     <ClInclude Include="EventInterface.h" />
+    <ClInclude Include="fPixelCoords.h" />
     <ClInclude Include="Int24.h" />
     <ClInclude Include="LogarithmicTrackbar.h" />
     <ClInclude Include="ModelInterface.h" />
+    <ClInclude Include="MoreTypes.h" />
     <ClInclude Include="NamedType.h" />
     <ClInclude Include="observable.h" />
     <ClInclude Include="observerInterface.h" />
