--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="NNetModel.h" />
     <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Segment.h" />
+    <ClInclude Include="Shape.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
