--- a/NNetSimu/NNetSimu.vcxproj.filters
+++ b/NNetSimu/NNetSimu.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="TimeDisplay.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpeedDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetSimu.rc">
