--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -157,7 +157,6 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="EnumArray.h" />
     <ClInclude Include="EventInterface.h" />
-    <ClInclude Include="fPixelCoords.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Int24.h" />
     <ClInclude Include="LogarithmicTrackbar.h" />
@@ -166,6 +165,7 @@
     <ClInclude Include="NamedType.h" />
     <ClInclude Include="observable.h" />
     <ClInclude Include="observerInterface.h" />
+    <ClInclude Include="PixelCoordsFp.h" />
     <ClInclude Include="PixelTypes.h" />
     <ClInclude Include="PointType.h" />
     <ClInclude Include="random.h" />
