--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="InputNeuron.cpp" />
     <ClCompile Include="NNetModel.cpp" />
     <ClCompile Include="Pipeline.cpp" />
   </ItemGroup>
