--- a/Win32_utilities/win32_utilities.rc
+++ b/Win32_utilities/win32_utilities.rc
@@ -8,11 +8,12 @@
 // Dialog resources
 //
 
-IDM_REFRESH_RATE_DIALOG DIALOGEX 0, 0, 170, 62
+IDD_STD_EDIT_DIALOG DIALOGEX 0, 0, 170, 62
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
-CAPTION "Refresh Rate"
-FONT 8, "MS Shell Dlg", 0, 0, 1
+CAPTION "Dialog box"
+FONT 10, "MS Shell Dlg", 0, 0, 1
 {
-    EDITTEXT      IDD_REFRESH_RATE_EDIT_CTL,  42, 14, 40, 10, ES_NUMBER
-    DEFPUSHBUTTON "OK",                IDOK, 113, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+    EDITTEXT IDD_EDIT_CTL, 42, 14, 40, 10, ES_NUMBER | ES_RIGHT
+	LTEXT    " ", IDC_STATIC,           85, 14, 60, 10, ES_LEFT 
+	DEFPUSHBUTTON "OK",                IDOK, 113, 41, 50, 14, WS_GROUP, WS_EX_LEFT
 }
