work on NNet UI. Release candidate.

--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -263,6 +263,7 @@
     <ClInclude Include="win32_evoAppWindow.h" />
     <ClInclude Include="win32_evoController.h" />
     <ClInclude Include="win32_resetDlg.h" />
+    <ClInclude Include="win32_speedControl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Evolution.cpp" />
@@ -277,6 +278,7 @@
     <ClCompile Include="win32_evoAppWindow.cpp" />
     <ClCompile Include="win32_evoController.cpp" />
     <ClCompile Include="win32_resetDlg.cpp" />
+    <ClCompile Include="win32_speedControl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Evolution.rc" />
