--- a/NNetSimu/NNetSimu.vcxproj
+++ b/NNetSimu/NNetSimu.vcxproj
@@ -160,7 +160,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="NNetSimu.h" />
-    <ClInclude Include="SpeedDisplay.h" />
+    <ClInclude Include="SlowMotionDisplay.h" />
+    <ClInclude Include="win32_slowMotionControl.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeDisplay.h" />
@@ -168,15 +169,17 @@
     <ClInclude Include="win32_NNetAppMenu.h" />
     <ClInclude Include="win32_NNetAppWindow.h" />
     <ClInclude Include="win32_NNetController.h" />
+    <ClInclude Include="win32_simulationControl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetSimu.cpp" />
-    <ClCompile Include="SpeedDisplay.cpp" />
+    <ClCompile Include="SlowMotionDisplay.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
     <ClCompile Include="win32_NNetAppMenu.cpp" />
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="win32_NNetController.cpp" />
+    <ClCompile Include="win32_simulationControl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="NNetSimu.rc" />
