--- a/Win32_utilities/win32_utilities.rc
+++ b/Win32_utilities/win32_utilities.rc
@@ -15,5 +15,6 @@ FONT 10, "MS Shell Dlg", 0, 0, 1
 {
     EDITTEXT IDD_EDIT_CTL, 42, 14, 40, 10, ES_NUMBER | ES_RIGHT
 	LTEXT    " ", IDC_STATIC,           85, 14, 60, 10, ES_LEFT 
-	DEFPUSHBUTTON "OK",                IDOK, 113, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+		DEFPUSHBUTTON "OK",     IDOK,     30, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+		DEFPUSHBUTTON "Cancel", IDCANCEL, 90, 41, 50, 14, WS_GROUP, WS_EX_LEFT
 }
