--- a/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/EvoHistGlue/EvoHistGlue.vcxproj
@@ -133,6 +133,7 @@
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>
       </AdditionalOptions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
