--- a/NNetModel/NNetModel.vcxproj.filters
+++ b/NNetModel/NNetModel.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="NNetParameters.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BaseKnot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetModel.cpp">
