KNot draws itself. Running.

--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,6 +1,6 @@
 MoveWindow IDM_CONS_WINDOW -2809 -2809 21 3
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 568 193 1804 884
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 576 244 1788 803
+MoveWindow IDM_APPL_WINDOW -8 -8 2576 1416
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MAIN_WINDOW 0 43 2560 1335
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
