--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,6 +1,6 @@
 MoveWindow IDM_CONS_WINDOW -2809 -2809 21 3
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 975
+MoveWindow IDM_APPL_WINDOW 4131 1211 1428 854
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 4139 1262 1412 773
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
