--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,6 +1,6 @@
 MoveWindow IDM_CONS_WINDOW -2809 -2809 21 3
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 4131 1211 1428 854
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 4139 1262 1412 773
+MoveWindow IDM_APPL_WINDOW -1928 1057 1936 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_MAIN_WINDOW -1920 1108 1920 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
