StdDialogBox has OK as default button

--- a/Win32_utilities/win32_utilities.rc
+++ b/Win32_utilities/win32_utilities.rc
@@ -13,8 +13,8 @@ STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Dialog box"
 FONT 10, "MS Shell Dlg", 0, 0, 1
 {
-    EDITTEXT IDD_EDIT_CTL, 42, 14, 40, 10, ES_NUMBER | ES_RIGHT
+    EDITTEXT IDD_EDIT_CTL, 42, 14, 40, 10, ES_RIGHT
 	LTEXT    " ", IDC_STATIC,           85, 14, 60, 10, ES_LEFT 
-		DEFPUSHBUTTON "OK",     IDOK,     30, 41, 50, 14, WS_GROUP, WS_EX_LEFT
-		DEFPUSHBUTTON "Cancel", IDCANCEL, 90, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+	DEFPUSHBUTTON "OK",     IDOK,     30, 41, 50, 14, WS_GROUP, WS_EX_LEFT
+	DEFPUSHBUTTON "Cancel", IDCANCEL, 90, 41, 50, 14, WS_GROUP, WS_EX_LEFT
 }
