--- a/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="win32_NNetEditor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_crsrWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_NNetWorkThread.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_NNetEditor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_crsrWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
