--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -2,7 +2,7 @@ MoveWindow IDM_CONS_WINDOW -2809 -2809 21 3
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW -1928 1057 1936 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_CRSR_WINDOW -1907 1132 301 116
-ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW -1907 1132 301 201
+ShowWindow IDM_CRSR_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW -1920 1108 1920 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
