--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,8 +1,8 @@
-MoveWindow IDM_CONS_WINDOW -2809 -2809 21 3
+MoveWindow IDM_CONS_WINDOW 4050 1198 993 519
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW -1928 1057 1936 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_CRSR_WINDOW -1907 1132 301 201
+MoveWindow IDM_APPL_WINDOW -1662 1212 1479 819
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW -812 1375 301 201
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW -1920 1108 1920 975
+MoveWindow IDM_MAIN_WINDOW -1654 1263 1463 738
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
