--- a/NNetModel/NNetModel.vcxproj.filters
+++ b/NNetModel/NNetModel.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="OutputNeuron.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NNetModelStorage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetModel.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Shape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NNetModelStorage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
