--- a/NNetModel/NNetModel.vcxproj.filters
+++ b/NNetModel/NNetModel.vcxproj.filters
@@ -83,5 +83,11 @@
     <ClCompile Include="NNetModelStorage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(MICROPROFILERDIR)\micro-profiler.initializer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="$(MICROPROFILERDIR)\micro-profiler_$(PlatformName).lib" />
   </ItemGroup>
 </Project>
