--- a/Win32_appFramework/Win32_appFramework.vcxproj.filters
+++ b/Win32_appFramework/Win32_appFramework.vcxproj.filters
@@ -79,5 +79,11 @@
     <ClCompile Include="win32_messagePump.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(MICROPROFILERDIR)\micro-profiler.initializer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="$(MICROPROFILERDIR)\micro-profiler_$(PlatformName).lib" />
   </ItemGroup>
 </Project>
