RemoveShape and Connect implemented. Running. Not completely tested.

--- a/NNetSimu/NNetSimu.rc
+++ b/NNetSimu/NNetSimu.rc
@@ -74,7 +74,7 @@ STRINGTABLE
 // Accelerator resources
 //
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
-IDC_EVOLUTION_MAIN ACCELERATORS
+IDC_NNET_SIMU_MAIN ACCELERATORS
 {
     "g",            IDM_FORWARD,      ASCII
     "r",            IDM_RUN,          ASCII
@@ -84,6 +84,7 @@ IDC_EVOLUTION_MAIN ACCELERATORS
     "y",            IDM_FORWARD,      VIRTKEY, CONTROL
 	"c",            IDM_CRSR_WINDOW,  ASCII,   ALT
 	"?",            IDM_ABOUT,        ASCII,   ALT
+	VK_DELETE,      IDD_REMOVE_SHAPE, VIRTKEY
 	VK_ESCAPE,      IDM_ESCAPE,       VIRTKEY
 }
 
